--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
       "eslint": "^7.15.0",
       "husky": "^5.0.6",
       "jest": "^26.6.3",
+      "prettier": "^2.2.1",
       "ts-jest": "^26.4.4",
       "ts-node": "3.3.0",
+      "tslint": "^6.1.3",
+      "tslint-config-airbnb": "^5.11.2",
+      "tslint-config-prettier": "^1.18.0",
       "typescript": "3.3.3333"
    },
    "dependencies": {
@@ -28,7 +32,7 @@
    },
    "scripts": {
       "start": "ts-node src/index.ts",
-      "lint": "eslint . --ext .ts",
+      "lint": "tslint --project tsconfig.json",
       "postinstall": "husky install",
       "test": "jest"
    }
