--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "husky": "^5.0.6",
       "jest": "^26.6.3",
       "prettier": "^2.2.1",
+      "supertest": "^6.0.1",
       "ts-jest": "^26.4.4",
       "ts-node": "3.3.0",
       "tslint": "^6.1.3",
@@ -34,6 +35,6 @@
       "start": "ts-node src/index.ts",
       "lint": "tslint --project tsconfig.json",
       "postinstall": "husky install",
-      "test": "jest"
+      "test": "NODE_ENV=test jest"
    }
 }
