--- a/package.json
+++ b/package.json
@@ -12,17 +12,15 @@
       "@typescript-eslint/eslint-plugin": "^4.10.0",
       "@typescript-eslint/parser": "^4.10.0",
       "babel-jest": "^26.6.3",
-      "eslint": "^7.15.0",
+      "eslint": "^7.16.0",
+      "eslint-config-prettier": "^7.1.0",
       "husky": "^5.0.6",
       "jest": "^26.6.3",
       "prettier": "^2.2.1",
       "supertest": "^6.0.1",
       "ts-jest": "^26.4.4",
       "ts-node": "3.3.0",
-      "tslint": "^6.1.3",
-      "tslint-config-airbnb": "^5.11.2",
-      "tslint-config-prettier": "^1.18.0",
-      "typescript": "3.3.3333"
+      "typescript": "^3.3.3333"
    },
    "dependencies": {
       "@types/express": "^4.17.9",
@@ -33,7 +31,7 @@
    },
    "scripts": {
       "start": "ts-node src/index.ts",
-      "lint": "tslint --project tsconfig.json",
+      "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
       "postinstall": "husky install",
       "test": "NODE_ENV=test jest"
    }
